# blog

./: README.md  compose.yaml
.github/workflows/: deploy.yml
back/: Cargo.toml  Dockerfile
back/entity/: Cargo.toml
back/entity/src/: lib.rs  mod.rs  post.rs  post_tag.rs  posts.rs  prelude.rs  tag.rs
back/migration/src/: lib.rs  m20220101_000001_create_posts.rs  m20231216_011219_rename_posts_to_post.rs  m20231216_021716_post_excerpt.rs  m20231216_163732_tags.rs  m20231216_202236_tag_slug_index.rs  m20231216_202618_post_tag_relation.rs
back/src/: main.rs
front/: +layout.svelte  .eslintrc.cjs  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: app.html
front/src/lib/: App.svelte  Post.svelte  PostExcerpt.svelte  Posts.svelte  Tag.svelte  api.ts
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/posts/[id]/: +page.svelte  +page.ts
front/src/routes/tags/[slug]/: +page.svelte  +page.ts
